[BDN-878] Add server-side pagination for AuctionConfugs
