# internal/admin/openapi/openapi.yaml
@@ -38,6 +38,31 @@ paths:
                 $ref: './schemas/auction-configuration.schema.json'
         default:
           $ref: '#/components/responses/ErrorResponse'
+  /api/auction_configurations_collection:
+    get:
+      operationId: getAuctionConfigurationsCollection
+      summary: List auction configurations
+      tags:
+        - Auction configurations Collection
+      parameters:
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/appId'
+        - $ref: '#/components/parameters/adType'
+        - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/isDefault'
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+      responses:
+        '200':
+          description: A list of line items
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './schemas/auction-configurations-collection.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
   /api/auction_configurations/{id}:
     parameters:
       - $ref: '#/components/parameters/idParam'
@@ -118,6 +143,31 @@ paths:
             application/json:
               schema:
                 $ref: './schemas/auction-configuration-v2.schema.json'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+  /api/v2/auction_configurations_collection:
+    get:
+      operationId: getAuctionConfigurationsCollectionV2
+      summary: List auction configurations V2
+      tags:
+        - Auction configurations Collection
+      parameters:
+        - $ref: '#/components/parameters/userId'
+        - $ref: '#/components/parameters/appId'
+        - $ref: '#/components/parameters/adType'
+        - $ref: '#/components/parameters/name'
+        - $ref: '#/components/parameters/isDefault'
+        - $ref: '#/components/parameters/page'
+        - $ref: '#/components/parameters/limit'
+      responses:
+        '200':
+          description: A list of line items
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './schemas/auction-configurations-v2-collection.schema.json'
         default:
           $ref: '#/components/responses/ErrorResponse'
   /api/v2/auction_configurations/{id}:
@@ -1125,3 +1175,17 @@ components:
       description: 'Filter by bidding status'
       schema:
         type: boolean
+    isDefault:
+      name: is_default
+      in: query
+      required: false
+      description: 'Filter by isDefault status'
+      schema:
+        type: boolean
+    name:
+      name: name
+      in: query
+      required: false
+      description: 'Filter by name'
+      schema:
+        type: string
